...
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center">

        <TextView
            android:id="@+id/courseName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Course Name"
            android:textAlignment="center"
            android:textSize="26sp"
            android:textStyle="bold" />
...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:text="@string/review"
            android:id="@+id/review_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:layout_marginEnd="20dp">
        </Button>

        <Button
            android:text="Read Reviews"
            android:id="@+id/read_reviews_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="0">
        </Button>
    </LinearLayout>
        <LinearLayout
...
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:padding="10dp">

                <TextView
                    android:id="@+id/overallTextViewLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Overall Score"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/overallscoretext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text=""
                    android:textSize="18sp"
                    />
...
                    android:text="Difficulty"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/difficultytext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text=""
                    android:textSize="18sp"
                    />
...
                    android:text="Material"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/materialtext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text=""
                    android:textSize="18sp"
                    />
...
                    android:text="Workload"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/workloadtext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text=""
                    android:textSize="18sp"
                    />
...
                    android:text="Teaching Quality"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/teachingqualitytext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text=""
                    android:textSize="18sp"
                    />
...
