<?xml version="1.0" encoding="utf-8"?>
<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Activities.LandingPageActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Overall Score"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

        <include
            layout="@layout/slider_layout"
            android:id="@+id/slider_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Course Difficulty"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

        <include
            layout="@layout/slider_layout"
            android:id="@+id/slider_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Course Workload"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

        <include
            layout="@layout/slider_layout"
            android:id="@+id/slider_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Teaching Quality"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

        <include
            layout="@layout/slider_layout"
            android:id="@+id/slider_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Course Material"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

        <include
            layout="@layout/slider_layout"
            android:id="@+id/slider_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/slider"
            android:layout_marginTop="16dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:padding="16dp"
            android:hint="Optional Comments"/>

        <Button
            android:id="@+id/submit_review_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="Submit" />
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        >

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/bottomBar_fragment_container_view"
            tools:layout="@layout/fragment_navigation_bar"
            android:layout_gravity="bottom"
            app:layout_anchorGravity="bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </com.google.android.material.bottomnavigation.BottomNavigationView>






</LinearLayout>
<!--</androidx.constraintlayout.widget.ConstraintLayout>-->