<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    android:id="@+id/review_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center"
...
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="">

            <TextView
                android:id="@+id/review_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="username"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <ImageButton
                android:id="@+id/delete_review_button"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:scaleType="fitCenter"
                android:src="@drawable/delete_icon"
                android:background="@null" />
        </LinearLayout>
...
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:gravity="end">

            <ImageButton
                android:id="@+id/upvote_button"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:scaleType="fitCenter"
                android:src="@drawable/upvote_icon"
                android:background="@null" />

            <TextView
                android:id="@+id/upvotes_downvotes_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="+1"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <ImageButton
                android:id="@+id/downvote_button"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:scaleType="fitCenter"
                android:src="@drawable/downvote_icon"
                android:background="@null"/>

...
